<?xml version="1.0"?>
<package format="2">
  <name>target_publisher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="4521021@ed.tus.ac.jp">reita</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>